[gd_scene load_steps=11 format=2]

[ext_resource path="res://Nexa.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/slots/cargo_mod_slot.gd" type="Script" id=2]
[ext_resource path="res://images/barter.png" type="Texture" id=3]
[ext_resource path="res://scenes/cards/cargo_card.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/card.png" type="Texture" id=5]
[ext_resource path="res://images/yes.png" type="Texture" id=6]
[ext_resource path="res://images/cargo-mod.png" type="Texture" id=7]
[ext_resource path="res://images/convert.png" type="Texture" id=8]
[ext_resource path="res://images/cargo-bg.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 10
use_filter = true
font_data = ExtResource( 1 )

[node name="CargoModSlot" type="TextureRect"]
unique_name_in_owner = true
margin_right = 96.0
margin_bottom = 128.0
texture = ExtResource( 5 )
script = ExtResource( 2 )

[node name="Bg" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.0392157 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 11 )

[node name="DeckType" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 7
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 7.0
margin_top = 4.0
margin_right = 92.0
margin_bottom = 124.0
alignment = 2

[node name="CargoCard" parent="MarginContainer/VBoxContainer" instance=ExtResource( 4 )]
visible = false
margin_left = 0.0
margin_top = 0.0
margin_right = 85.0
margin_bottom = 116.0
size_flags_vertical = 3

[node name="Card" parent="MarginContainer/VBoxContainer/CargoCard" index="1"]
margin_bottom = 116.0

[node name="VBoxContainer" parent="MarginContainer/VBoxContainer/CargoCard/Card" index="0"]
margin_bottom = 97.0

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
margin_top = 101.0
margin_right = 85.0
margin_bottom = 120.0
custom_constants/separation = 6
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Buttons"]
margin_left = 1.0
margin_right = 25.0
margin_bottom = 19.0

[node name="Deliver" type="Button" parent="MarginContainer/VBoxContainer/Buttons/MarginContainer"]
unique_name_in_owner = true
margin_right = 24.0
margin_bottom = 19.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
disabled = true
icon = ExtResource( 6 )

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/Buttons"]
margin_left = 31.0
margin_right = 55.0
margin_bottom = 19.0

[node name="Barter" type="Button" parent="MarginContainer/VBoxContainer/Buttons/MarginContainer2"]
unique_name_in_owner = true
margin_right = 24.0
margin_bottom = 19.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
disabled = true
toggle_mode = true
icon = ExtResource( 3 )

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/Buttons"]
margin_left = 61.0
margin_right = 85.0
margin_bottom = 19.0

[node name="Move" type="Button" parent="MarginContainer/VBoxContainer/Buttons/MarginContainer4"]
unique_name_in_owner = true
margin_right = 24.0
margin_bottom = 19.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
disabled = true
icon = ExtResource( 8 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/MarginContainer/Deliver" to="." method="_on_deliver_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Buttons/MarginContainer2/Barter" to="." method="_on_barter_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/MarginContainer4/Move" to="." method="_on_move_pressed"]

[editable path="MarginContainer/VBoxContainer/CargoCard"]
